@@ -1,3 +1,7 @@
+2012-05-09 Marco Bodrato <bodrato@mail.dm.unipi.it>
+
+	* mini-gmp/mini-gmp.c: merge mpz_rootrem and mpz_sqrtrem.
+
 2012-05-08  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/minithres/gmp-mparam.h (REDC_1_TO_REDC_N_THRESHOLD): Up to 9, for
